First acquaintance is finished

--- a/study/study/study.vcxproj
+++ b/study/study/study.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="studytheC.c" />
+    <ClCompile Include="初阶.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
