--- a/study/study/study.vcxproj.filters
+++ b/study/study/study.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="studytheC.c">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="初阶.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
